Fix header alignment and column sizes Adjust header style to fit correct class naming Adjust ProductHeader to fit properly the header

--- a/src/components/Category/ProductHeader/style.less
+++ b/src/components/Category/ProductHeader/style.less
@@ -1,10 +1,8 @@
 @import "../../../utils/base/base";
 
 .ProductHeader {
-  margin-top: 40px;
   width: 100%;
   background: #F7F7F7;
-  box-shadow: 0px -1px 0px 1px rgba(0, 0, 0, 0.1);
 
   .icon {
     float: left;
