--- a/src/components/Header/Header.less
+++ b/src/components/Header/Header.less
@@ -1,17 +1,18 @@
-.v-header {
-  width: 100%;
-  height: 30px;
-  margin-top: 10px;
-}
+.Header {
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 
-.v-header__brand {
-  position: relative;
-  margin: 0;
-  font-size: 19px;
-  font-style: italic;
-  font-weight: 400;
-}
+  .brand {
+    position: relative;
+    margin: 0;
+    font-size: 19px;
+    font-style: italic;
+    font-weight: 400;
+  }
 
-.v-header__icon {
-  padding-top: 2px;
+  .icon {
+    padding-top: 2px;
+  }
 }
